# PlaylistOrganizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  models.py  parser.py
app/services/: __init__.py  importer.py  validator.py  xtream_categories.py
app/static/: styles.css
app/templates/: archive.html  base.html  dashboard.html  import.html  job_detail.html  jobs.html  provider_detail.html  providers.html
tests/: test_app_routes.py  test_app_smoke.py  test_importer.py  test_parser.py  test_provider_rows.py  test_validation_job.py  test_validator.py
