[project]
name = "playlist-organizer"
version = "0.1.0"
description = "Local M3U credential manager"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlmodel==0.0.22",
  "httpx==0.28.1",
  "jinja2==3.1.5",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "respx==0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
